--- a/REVISTA URBAN CENTER 2017/REVISTA PRESIDENTE/Presidente.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA PRESIDENTE/Presidente.html
@@ -14,7 +14,6 @@
     		<li><a href="Home.html"><img src="images/Logo_OVA_B.svg" width="150"></a></li>
     		<li><button><a href="../REVISTA CORONA/Corona.html">Corona</a></button></li>
     		<li><button><a href="../REVISTA BARCELO/Barcelo.html">Barcel&oacute;</a></button></li>
-    		<li><button><a href="../REVISTA STELLA/Stella.html">Stella</a></button></li>
     	</ul>
   		</div>
 	</nav>
@@ -207,6 +206,34 @@
 
 	      <div class="item">
 	        <img src="images/Z.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	          <h3>Góndola</h3>
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/01.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	          <h3>Góndola</h3>
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/02.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	          <h3>Góndola</h3>
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/03.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	          <h3>Góndola</h3>
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/04.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	          <h3>Góndola</h3>
 	        </div>
