URBAN CENTER 2017 CND

--- a/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
@@ -11,9 +11,10 @@
 	<nav class="navbar">
   		<div class="container2">
     	<ul>
-    		<li><a href="Home.html"><img src="images/Logo_OVA_B.svg" width="150"></a></li>
-    		<li><button><a href="../REVISTA PRESIDENTE/Presidente.html">Presidente</a></button></li>
+    		<li><a href="#"><img src="images/Logo_OVA_B.svg" width="150"></a></li>
     		<li><button><a href="../REVISTA CORONA/Corona.html">Corona</a></button></li>
+    		<li><button><a href="../REVISTA PRESIDENTE/Presidente.html">Presidente</a></button></li>
+    		<li><button><a href="../REVISTA BARCELO/Stella.html">Stella</a></button></li>
     	</ul>
   		</div>
 	</nav>
@@ -51,97 +52,6 @@
 	        <img src="images/02.jpg" alt="Chania">
 	        <div class="carousel-caption">
 	          <h3>Bolsos</h3>
-	        </div>
-	      </div>
-	    
-	      <div class="item">
-	        <img src="images/03.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Botella montada sobre pared</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/04.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Logo montado sobre pared</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/15.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Logo montado sobre pared 02</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/16.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Logo montado sobre pared 03</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/05.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Logo Vynil a Color sobre Vidrio</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/06.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Logo Vynil Gris sobre Vidrio</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/07.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Tank Top / Franela</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/08.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Cojines para muebles</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/09.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Cojines para muebles</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/10.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Afiches para exterior</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/11.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Letreros para exterior / Roseta</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/12.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Arte para pared</h3>
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/13.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	          <h3>Góndola</h3>
 	        </div>
 	      </div>
 	  
