--- a/REVISTA URBAN CENTER 2017/REVISTA PRESIDENTE/Presidente.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA PRESIDENTE/Presidente.html
@@ -11,8 +11,10 @@
 	<nav class="navbar">
   		<div class="container2">
     	<ul>
-    		<li><a href="Home.html"><img src="images/Logo_OVA_B.svg" width="150"></a></li>
+    		<li><a href="#"><img src="images/Logo_OVA_B.svg" width="150"></a></li>
     		<li><button><a href="../REVISTA CORONA/Corona.html">Corona</a></button></li>
+    		<li><button><a href="../REVISTA STELLA/Stella.html">Stella</a></button></li>
+    		<li><button><a href="../REVISTA BARCELO/Barcelo.html">Barcel&oacute;</a></button></li>
     	</ul>
   		</div>
 	</nav>
@@ -42,8 +44,6 @@
 	      <li data-target="#myCarousel" data-slide-to="18"></li>
 	      <li data-target="#myCarousel" data-slide-to="19"></li>
 	      <li data-target="#myCarousel" data-slide-to="20"></li>
-	      <li data-target="#myCarousel" data-slide-to="21"></li>
-	      <li data-target="#myCarousel" data-slide-to="22"></li>
 	    </ol>
 
 	    <!-- Wrapper for slides -->
@@ -141,6 +141,12 @@
 
 	      <div class="item">
 	        <img src="images/P.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/Q.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
