--- a/REVISTA URBAN CENTER 2017/REVISTA STELLA/Stella.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA STELLA/Stella.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>OVA - Corona Aplicaciones</title>
+  <title>OVA - Presidente Aplicaciones</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=2">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -12,8 +12,8 @@
   		<div class="container2">
     	<ul>
     		<li><a href="#"><img src="images/Logo_OVA_B.svg" width="150"></a></li>
+    		<li><button><a href="../REVISTA CORONA/Corona.html">Corona</a></button></li>
     		<li><button><a href="../REVISTA PRESIDENTE/Presidente.html">Presidente</a></button></li>
-    		<li><button><a href="../REVISTA STELLA/Stella.html">Stella</a></button></li>
     		<li><button><a href="../REVISTA BARCELO/Barcelo.html">Barcel&oacute;</a></button></li>
     	</ul>
   		</div>
@@ -37,12 +37,15 @@
 	      <li data-target="#myCarousel" data-slide-to="11"></li>
 	      <li data-target="#myCarousel" data-slide-to="12"></li>
 	      <li data-target="#myCarousel" data-slide-to="13"></li>
-		  <li data-target="#myCarousel" data-slide-to="14"></li>
-		  <li data-target="#myCarousel" data-slide-to="15"></li>
-		  <li data-target="#myCarousel" data-slide-to="16"></li>
-		  <li data-target="#myCarousel" data-slide-to="17"></li>
-		  <li data-target="#myCarousel" data-slide-to="18"></li>
-		  <li data-target="#myCarousel" data-slide-to="19"></li>
+	      <li data-target="#myCarousel" data-slide-to="14"></li>
+	      <li data-target="#myCarousel" data-slide-to="15"></li>
+	      <li data-target="#myCarousel" data-slide-to="16"></li>
+	      <li data-target="#myCarousel" data-slide-to="17"></li>
+	      <li data-target="#myCarousel" data-slide-to="18"></li>
+	      <li data-target="#myCarousel" data-slide-to="19"></li>
+	      <li data-target="#myCarousel" data-slide-to="20"></li>
+	      <li data-target="#myCarousel" data-slide-to="21"></li>
+	      <li data-target="#myCarousel" data-slide-to="22"></li>
 	    </ol>
 
 	    <!-- Wrapper for slides -->
@@ -55,11 +58,11 @@
 	      </div>
 
 	      <div class="item">
-	        <img src="images/02.jpg" alt="Chania">
+	        <img src="images/02.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
-	    
+
 	      <div class="item">
 	        <img src="images/03.jpg" alt="Flower">
 	        <div class="carousel-caption">
@@ -68,18 +71,6 @@
 
 	      <div class="item">
 	        <img src="images/04.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/15.jpg" alt="Flower">
-	        <div class="carousel-caption">
-	        </div>
-	      </div>
-
-	      <div class="item">
-	        <img src="images/16.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
@@ -145,6 +136,18 @@
 	      </div>
 
 	      <div class="item">
+	        <img src="images/15.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/16.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
 	        <img src="images/17.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
@@ -167,7 +170,32 @@
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
-	  
+
+
+	      <div class="item">
+	        <img src="images/21.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/22.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/23.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/24.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+	    
 	    </div>
 
 	    <!-- Left and right controls -->
