URBAN CENTER 2017 CND

--- a/REVISTA URBAN CENTER 2017/REVISTA CORONA/Corona.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA CORONA/Corona.html
@@ -132,6 +132,18 @@
 	      </div>
 
 	      <div class="item">
+	        <img src="images/15.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/16.jpg" alt="Flower">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
 	        <img src="images/17.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
