--- a/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
@@ -31,11 +31,6 @@
 	      <li data-target="#myCarousel" data-slide-to="5"></li>
 	      <li data-target="#myCarousel" data-slide-to="6"></li>
 	      <li data-target="#myCarousel" data-slide-to="7"></li>
-	      <li data-target="#myCarousel" data-slide-to="8"></li>
-	      <li data-target="#myCarousel" data-slide-to="9"></li>
-	      <li data-target="#myCarousel" data-slide-to="10"></li>
-	      <li data-target="#myCarousel" data-slide-to="11"></li>
-	      <li data-target="#myCarousel" data-slide-to="12"></li>
 	    </ol>
 
 	    <!-- Wrapper for slides -->
@@ -49,6 +44,42 @@
 
 	      <div class="item">
 	        <img src="images/02.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/03.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/04.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/05.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/06.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/07.jpg" alt="Chania">
+	        <div class="carousel-caption">
+	        </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="images/08.jpg" alt="Chania">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
