URBAN CENTER 2017 CND

--- a/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
@@ -42,44 +42,44 @@
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/02.jpg" alt="Chania">
+	      <div class="item active">
+	        <img src="images/02.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/03.jpg" alt="Chania">
+	      <div class="item active">
+	        <img src="images/03.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/04.jpg" alt="Chania">
+	      <div class="item active">
+	        <img src="images/04.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/05.jpg" alt="Chania">
+	      <div class="item active">
+	        <img src="images/05.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/06.jpg" alt="Chania">
+	      <div class="item active">
+	        <img src="images/06.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/07.jpg" alt="Chania">
+	      <div class="item active">
+	        <img src="images/07.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/08.jpg" alt="Chania">
+	      <div class="item active">
+	        <img src="images/08.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
