URBAN CENTER 2017 CND

--- a/REVISTA URBAN CENTER 2017/REVISTA STELLA/Stella.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA STELLA/Stella.html
@@ -66,14 +66,16 @@
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/05.jpg" alt="Flower">
+
+	      <div class="item active">
+	        <img src="images/05.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item">
-	        <img src="images/06.jpg" alt="Flower">
+
+	      <div class="item active">
+	        <img src="images/06.jpg" alt="Gorras">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
