--- a/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
@@ -19,7 +19,7 @@
   		</div>
 	</nav>
 
-	<div class="container">
+<div class="container">
 	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	    <!-- Indicators -->
 	    <ol class="carousel-indicators">
@@ -31,6 +31,12 @@
 	      <li data-target="#myCarousel" data-slide-to="5"></li>
 	      <li data-target="#myCarousel" data-slide-to="6"></li>
 	      <li data-target="#myCarousel" data-slide-to="7"></li>
+	      <li data-target="#myCarousel" data-slide-to="8"></li>
+	      <li data-target="#myCarousel" data-slide-to="9"></li>
+	      <li data-target="#myCarousel" data-slide-to="10"></li>
+	      <li data-target="#myCarousel" data-slide-to="11"></li>
+	      <li data-target="#myCarousel" data-slide-to="12"></li>
+	      <li data-target="#myCarousel" data-slide-to="13"></li>
 	    </ol>
 
 	    <!-- Wrapper for slides -->
@@ -42,48 +48,48 @@
 	        </div>
 	      </div>
 
-	      <div class="item active">
-	        <img src="images/02.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/02.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item active">
-	        <img src="images/03.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/03.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item active">
-	        <img src="images/04.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/04.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item active">
-	        <img src="images/05.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/05.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item active">
-	        <img src="images/06.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/06.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item active">
-	        <img src="images/07.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/07.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-	      <div class="item active">
-	        <img src="images/08.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/08.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
-	  
+	    
 	    </div>
 
 	    <!-- Left and right controls -->
