--- a/REVISTA URBAN CENTER 2017/REVISTA STELLA/Stella.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA STELLA/Stella.html
@@ -19,7 +19,7 @@
   		</div>
 	</nav>
 
-	<div class="container">
+<div class="container">
 	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	    <!-- Indicators -->
 	    <ol class="carousel-indicators">
@@ -66,16 +66,14 @@
 	        </div>
 	      </div>
 
-
-	      <div class="item active">
-	        <img src="images/05.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/05.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
 
-
-	      <div class="item active">
-	        <img src="images/06.jpg" alt="Gorras">
+	      <div class="item">
+	        <img src="images/06.jpg" alt="Flower">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
