--- a/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
+++ b/REVISTA URBAN CENTER 2017/REVISTA BARCELO/Barcelo.html
@@ -43,7 +43,7 @@
 	      </div>
 
 	      <div class="item">
-	        <img src="images/02.jpg" alt="Flower">
+	        <img src="images/02.jpg" alt="Chania">
 	        <div class="carousel-caption">
 	        </div>
 	      </div>
